Activated database at pre-deployment stage

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && cd server && npm start",
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
