--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@cloudinary/react": "^1.14.1",
     "@cloudinary/url-gen": "^1.21.0",
+    "@stripe/stripe-js": "^6.1.0",
     "axios": "^1.8.2",
     "bootstrap": "^5.3.3",
     "gh-pages": "^6.3.0",
@@ -28,7 +29,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-spinners": "^0.15.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
