--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://admin:Ti9191100mur@cluster0.lrppz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://user:user1234@cluster0.lrppz.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
 CLOUD_NAME=dsmmxbv7n
 CLOUD_API=539441821552498
