--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start": "node server/main.js",
+    "start": "node server/index.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
